# image_brighten_ros

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
config/: ImageBrighten.cfg
include/image_brighten/: dehaze.h  guided_filter.h  image_brighten.h
launch/: image_brighten.launch
src/: dehaze.cpp  guided_filter.cpp  image_brighten.cpp  image_brighten_node.cpp  image_brighten_nodelet.cpp
